--- a/calendar/resources/config.yaml
+++ b/calendar/resources/config.yaml
@@ -1,4 +1,5 @@
 http_listen: :9999
-database_url: postgres://otus:123@localhost:5432/eventdb
+database_url: postgres://event_admin:123@localhost:5432/eventsdb
 log_file: file
 log_level: debug
+rabbit_url: amqp://guest:guest@localhost:5672/
