Добавлены Dockerfile.calendar Dockerfile.publisher Dockerfile.scheduler

--- a/calendar/dockerfiles/docker-compose.yml
+++ b/calendar/dockerfiles/docker-compose.yml
@@ -10,10 +10,28 @@ services:
     - 5432:5432
     environment:
       - POSTGRES_PASSWORD=docker
+    networks:
+      - db
 
   rabbit:
     container_name: rabbit
     image: rabbitmq:3-management
     ports:
-    - 5672:5672
     - 15672:15672
+    networks:
+      - query
+
+  publisher:
+    build:
+      dockerfile: ./Dockerfile.publisher
+    container_name: event-publisher
+    depends_on:
+      - rabbit
+    networks:
+      - query
+
+networks:
+  db:
+    driver: bridge
+  query:
+    driver: bridge
