--- a/calendar/resources/config.yaml
+++ b/calendar/resources/config.yaml
@@ -2,4 +2,4 @@ http_listen: :9999
 database_url: postgres://event_admin:123@localhost:5432/eventsdb
 log_file: file
 log_level: debug
-rabbit_url: amqp://guest:guest@localhost:5672/
+rabbit_url: amqp://guest:guest@rabbit:5672/
