--- a/calendar/docker-compose.yml
+++ b/calendar/docker-compose.yml
@@ -1,15 +1,18 @@
-version: '2.4'
+version: '3.7'
 
 services:
   postgres:
     container_name: postgres
     image: postgres
     volumes:
-    - $HOME/docker/volumes/postgres:/var/lib/postgresql/data
+#    - $HOME/docker/volumes/postgres:/var/lib/postgresql/data
+    - ./migrations:/docker-entrypoint-initdb.d
     ports:
     - 5432:5432
     environment:
+      - POSTGRES_USER=event_admin
       - POSTGRES_PASSWORD=docker
+      - POSTGRES_DB=eventsdb
     networks:
       - db
 
